# qrchive

./: .gitignore  Cargo.toml  LICENSE  qr.csv  svg.tera
src/: main.rs  qr_data.rs
