[package]
name = "qrchive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
clap = { version = "4.0.30", features = ["derive"] }
colour = "0.6.0"
crc32fast = "1.3.2"
image = "0.24.5"
itertools = "0.10.5"
qrcode = "0.12.0"
resvg = "0.28.0"
tera = "1.8.0"
tiny-skia = "0.8.2"
usvg = "0.28.0"
usvg-text-layout = "0.28.0"
zbar-rust = "0.0.21"
